# UnrealEditorToyMCP

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.local.json
Plugins/UnrealEditorMCP/: UnrealEditorMCP.uplugin
Plugins/UnrealEditorMCP/Source/UnrealEditorMCP/: UnrealEditorMCP.Build.cs
Plugins/UnrealEditorMCP/Source/UnrealEditorMCP/Private/: UnrealEditorMCP.cpp  UnrealEditorMCPSubsystem.cpp
Plugins/UnrealEditorMCP/Source/UnrealEditorMCP/Public/: UnrealEditorMCPSubsystem.h
Plugins/UnrealEditorToyMCP/: UnrealEditorToyMCP.uplugin
Plugins/UnrealEditorToyMCP/Source/UnrealEditorToyMCP/: UnrealEditorMCP.Build.cs
Plugins/UnrealEditorToyMCP/Source/UnrealEditorToyMCP/Private/: MCPJsonHelpers.cpp  MCPJsonHelpers.h  UnrealEditorMCP.cpp
Plugins/UnrealEditorToyMCP/Source/UnrealEditorToyMCP/Public/: MCPJsonStructs.h  UnrealEditorMCP.h
SampleProject/: SampleProject.uproject
SampleProject/Config/: DefaultEngine.ini  DefaultGame.ini
SampleProject/Content/: lvl_McpTest.umap
SampleProject/Source/: SampleProject.Target.cs  SampleProjectEditor.Target.cs
SampleThirdPerson/.claude/: settings.local.json
scripts/: test_mcp.py
src/study_unrealeditormcp/: __init__.py  connection.py  server.py
src/study_unrealeditormcp/tools/: __init__.py  editor_tools.py
src/unreal_editor_mcp/: __init__.py  connection.py  server.py
src/unreal_editor_mcp/tools/: __init__.py  base.py  editor_tools.py  execute_python_tool.py  get_actors_tool.py  ping_tool.py  registry.py
(+17 files in other folders)
